[package]
name = "sedna-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.8"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
tokio = { version = "1.52.1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-async-std", "postgres", "chrono", "uuid"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }